force-app/main/default/objects/Plan__c/fields/Billing_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relationship to the billing account this plan is related to.</description>
    <label>Billing Account Number</label>
    <referenceTo>Billing_Account__c</referenceTo>
    <relationshipLabel>Plans</relationshipLabel>
    <relationshipName>Plans</relationshipName>
    <type>Lookup</type>
</CustomField>