force-app/main/default/objects/Plan__c/fields/CTNs_on_Plan__c.field-meta.xml
<CustomField>
    <fullName>CTNs_on_Plan__c</fullName>
    <label>CTNs on Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>