force-app/main/default/objects/Plan__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Full description of the product for this plan.</description>
    <label>Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>