force-app/main/default/objects/Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Billing_Account_Number__c</columns>
    <columns>Product__c</columns>
    <columns>Plan_Effective_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>