force-app/main/default/objects/Plan__c/listViews/LWC_Plans.listView-meta.xml
<ListView>
    <fullName>LWC_Plans</fullName>
    <columns>NAME</columns>
    <columns>Billing_Account_Number__c</columns>
    <columns>Product__c</columns>
    <columns>Plan_Effective_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>LWC Plans</label>
</ListView>